add form that converts user input to upper case.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       <h6>Dear <span class="nameOne"></span>,</h6>
       <p>Thanks for applying to <em>CoolJobs</em>. <span class="nameOne"></span> your resume was very impressive however you are not cool enough to work here. Goodbye.</p>
 
+      <form class="upperCase">
+        <div class="form-group">
+          <label for="toUpperCase">Make a sentence.</label>
+          <input id="toUpperCase" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">See your sentence in upper case!</button>
+      </form>
+      <p><span class="upperResponse"></span>!!!!</p>
     </div><!--end container-->
 
   </body>
